# Strict

./: .editorconfig  .gitignore  Any.strict  Boolean.strict  Byte.strict  BytesReader.strict  BytesWriter.strict  Character.strict  Dictionary.strict  Directory.strict  Enum.strict  Error.strict  ErrorWithValue.strict  File.strict  Generic.strict  HashCode.strict  HelloWorld.strict  Iterator.strict  LICENSE  Length.strict  List.strict  Logger.strict  Member.strict  Method.strict  Mutable.strict  Name.strict  Number.strict  Path.strict  Program.strict  README.md  Range.strict  Stacktrace.strict  Strict.ndproj  Strict.sln  Strict.sln.DotSettings  Strict.txt  Strict.v3.ncrunchsolution  System.strict  TODO.editorconfig  Text.strict  (+8 more)
.github/: copilot-instructions.md
Base/: Any.strict  BinaryOperator.strict  Boolean.strict  Character.strict  Count.strict  Directory.strict  Error.strict  File.strict  Generic.strict  HashCode.strict  Input.strict  List.strict  Log.strict  Method.strict  Mutable.strict  Number.strict  Output.strict  Range.strict  Stacktrace.strict  System.strict  Text.strict  Type.strict  UnaryOperator.strict
Benchmark/: Benchmark.csproj  BinaryOperatorTests.cs
BenchmarkSuite1/: Program.cs  (+3 more)
NativePlugins/ImageLoader/: CMakeLists.txt  Image.cs  ImageLoader.csproj  ImageLoader.vcxproj  ImageLoader.vcxproj.filters  README.md  build.bat  build.sh
NativePlugins/ImageLoader/src/: imageloader.c
NativePlugins/ImageSaver/: CMakeLists.txt  ImageSaver.vcxproj  ImageSaver.vcxproj.filters  README.md  build.bat  build.sh
NativePlugins/ImageSaver/src/: imagesaver.c
(+891 files in other folders)
